// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cheapestTree can calculate the cheapest tree correctly 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 84,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "decisionPrice": 84,
      "id": 2,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 2,
      "usedQuantity": 2,
    },
    Object {
      "buyPrice": 100,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "usedQuantity": 20,
        },
      ],
      "craft": false,
      "craftPrice": 200,
      "decisionPrice": 100,
      "id": 3,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "usedQuantity": 10,
    },
    Object {
      "buyPrice": 10000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 6,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "usedQuantity": 20,
        },
      ],
      "craft": true,
      "craftPrice": 200,
      "decisionPrice": 200,
      "id": 5,
      "output": 1,
      "quantity": 5,
      "recipe_id": 123,
      "totalQuantity": 10,
      "usedQuantity": 10,
    },
  ],
  "craft": true,
  "craftPrice": 384,
  "decisionPrice": 384,
  "id": 1,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 2,
  "usedQuantity": 2,
}
`;

exports[`cheapestTree can calculate the cheapest tree correctly with available items 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 6,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 60,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 60,
          "id": 4,
          "output": 1,
          "quantity": 1,
          "totalQuantity": 6,
          "usedQuantity": 6,
        },
      ],
      "craft": false,
      "craftPrice": 60,
      "decisionPrice": 6,
      "id": 7,
      "output": 1,
      "quantity": 3,
      "totalQuantity": 6,
      "usedQuantity": 6,
    },
    Object {
      "buyPrice": 300,
      "buyPriceEach": 100,
      "components": Array [
        Object {
          "buyPrice": 30,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 30,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 6,
          "usedQuantity": 3,
        },
      ],
      "craft": true,
      "craftPrice": 30,
      "decisionPrice": 30,
      "id": 3,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "usedQuantity": 3,
    },
    Object {
      "buyPrice": 0,
      "buyPriceEach": 25,
      "components": Array [
        Object {
          "buyPrice": 0,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "decisionPrice": 0,
          "id": 6,
          "output": 1,
          "quantity": 100,
          "totalQuantity": 0,
          "usedQuantity": 0,
        },
      ],
      "craft": false,
      "craftPrice": 0,
      "decisionPrice": 0,
      "id": 5,
      "output": 1,
      "quantity": 2,
      "totalQuantity": 4,
      "usedQuantity": 0,
    },
  ],
  "craft": true,
  "craftPrice": 36,
  "decisionPrice": 36,
  "id": 1,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 2,
  "usedQuantity": 2,
}
`;

exports[`cheapestTree can calculate the cheapest tree correctly with force buy items 1`] = `
Object {
  "buyPrice": 20,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 1000,
      "buyPriceEach": 100,
      "components": Array [
        Object {
          "buyPrice": 200,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 200,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 20,
          "usedQuantity": 20,
        },
      ],
      "craft": false,
      "craftPrice": 200,
      "decisionPrice": 1000,
      "id": 3,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 10,
      "usedQuantity": 10,
    },
  ],
  "craft": true,
  "craftPrice": 1000,
  "decisionPrice": 1000,
  "id": 1,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 2,
  "usedQuantity": 2,
}
`;
